# pip_gui

./: .gitignore  README.md  SETUP.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tailwind.config.js  tauri.conf.json
src-tauri/src/: index.html  main.rs  state.rs
src-tauri/src/commands/: browser.rs  mod.rs  pip.rs  project.rs  pypi.rs  python.rs  venv.rs
src-tauri/src/models/: mod.rs  packages.rs  pypi.rs  python.rs
src-tauri/src/utils/: cache.rs  mod.rs  platform.rs  validation.rs
src-tauri/src/utils/css/: input.css  output.css
src-tauri/src/utils/js/: main.js
