[package]
name = "pip_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pip_gui"
path = "src/main.rs"

[dependencies]
tauri = "2.0"
tauri-build = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
directories = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
